--- a/client/src/components/pokemon_detail/index.css
+++ b/client/src/components/pokemon_detail/index.css
@@ -3,10 +3,14 @@
   height: 200px;
 }
 
-.pokemon-types p {
+.pokemon-types,
+.pokemon-status {
   margin: 15px;
-  font-size: 20px;
-  /* background-color: red; */
+  font-size: 18px;
+  border: 1px solid black;
+  border-radius: 10px;
+  padding: 10px;
+  background-color: mistyrose;
 }
 
 .btn-catch {
