--- a/client/src/components/utils/nav/nav.css
+++ b/client/src/components/utils/nav/nav.css
@@ -2,7 +2,7 @@ nav {
   display: flex;
   justify-content: left;
   align-items: center;
-  min-height: 10vh;
+  min-height: 15vh;
   background: rgb(240, 67, 67);
 }
 
@@ -10,7 +10,7 @@ nav {
   width: 50%;
   display: flex;
   justify-content: space-around;
-  align-items: center;
+  align-items: left;
   list-style: none;
   margin: 15px;
 }
@@ -19,4 +19,11 @@ nav {
   width: auto;
   height: 70px;
   margin: 5px;
+}
+
+.nav-style {
+  font-size: 20px;
+  color: white;
+  padding: 5px;
+  border-radius: 5px;
 }
